KnowledgeHub Search Revamp